--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(pics/m.jpg);
+    background-image: url(m.jpg);
     
   }
   
